systemd (44-3) UNRELEASED; urgency=low

  [ Michael Biebl ]
  * Bump to debhelper 9.

 -- Tollef Fog Heen <tfheen@debian.org>  Fri, 29 Jun 2012 22:34:16 +0200

systemd (44-2) unstable; urgency=low

  [ Michael Biebl ]
  * Tighten the versions in the maintscript file
  * Ship the /sys directory in the package
  * Re-add workaround for non-interactive PAM sessions
  * Mask checkroot-bootclean (Closes: #670591)
  * Don't ignore errores in systemd-sysv postinst

  [ Tollef Fog Heen ]
  * Bring tmpfiles.d/tmp.conf in line with Debian defaults.  Closes: #675422
  * Make sure /run/sensigs.omit.d exists.
  * Add python-dbus and python-cairo to Suggests, for systemd-analyze.
    Closes: #672965

 -- Tollef Fog Heen <tfheen@debian.org>  Tue, 08 May 2012 18:04:22 +0200

systemd (44-1) unstable; urgency=low

  [ Tollef Fog Heen ]
  * New upstream version.
    - Backport 3492207: journal: PAGE_SIZE is not known on ppc and other
      archs
    - Backport 5a2a2a1: journal: react with immediate rotation to a couple
      of more errors
    - Backport 693ce21: util: never follow symlinks in rm_rf_children()
      Fixes CVE-2012-1174, closes: #664364
  * Drop output message from init-functions hook, it's pointless.
  * Only rmdir /lib/init/rw if it exists.
  * Explicitly order debian-fixup before sysinit.target to prevent a
    possible race condition with the creation of sockets.  Thanks to
    Michael Biebl for debugging this.
  * Always restart the initctl socket on upgrades, to mask sysvinit
    removing it.

  [ Michael Biebl ]
  * Remove workaround for non-interactive sessions from pam config again.
  * Create compat /dev/initctl symlink in case we are upgrading from a system
    running a newer version of sysvinit (using /run/initctl) and sysvinit is
    replaced with systemd-sysv during the upgrade. Closes: #663219
  * Install new man pages.
  * Build-Depend on valac (>= 0.12) instead of valac-0.12. Closes: #663323
