@@ -1,2 +1,2 @@
-lib/security/pam_systemd.so
+lib/*/security/pam_systemd.so
 usr/share/man/man8/pam_systemd.8
