@@ -1,1 +1,1 @@
-lib/libsystemd-id128.so.*
+lib/*/libsystemd-id128.so.*
