@@ -1,3 +1,3 @@
-usr/lib/libsystemd-id128.so
-usr/lib/pkgconfig/libsystemd-id128.pc
+usr/lib/*/libsystemd-id128.so
+usr/lib/*/pkgconfig/libsystemd-id128.pc
 usr/include/systemd/sd-id128.h
