@@ -1,1 +1,1 @@
-lib/libsystemd-journal.so.*
+lib/*/libsystemd-journal.so.*
